smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/default-missing-value.smithy
// Syntax error at line 7, column 18
$version: "2.0"

namespace com.foo

structure Foo {
    bar: String =
}
